# STXTOFR

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/analysis/: models.py  provider_audit.py  service.py
app/api/: dependencies.py  routes.py  schemas.py
app/core/: config.py  exceptions.py  http.py  time.py
app/ingestion/: service.py
app/normalization/: geo.py  merge.py  models.py  taxonomy.py
app/providers/: base.py  common.py
app/providers/circlek/: adapter.py  mapper.py
app/routing/: publisher.py
app/services/: baserow.py  curation.py  export_service.py  facility_view.py  provider_registry.py  provider_status.py
app/storage/: db.py  raw_archive.py  repository.py  schema.py
docs/: baserow-setup.md  commit-history.md  curation-workflow.md  export-bundle.md  ops-workflow.md  provider-strategies.md  release-checklist.md  repo-writing.md  source-coverage.md  source-notes.md  trb-capture.md  uml.md
legacy/: README.md
migrations/: README.md  env.py
migrations/versions/: 20231025_0001_baseline.py
scripts/: audit_providers.py  capture_trb_locator.py  load_dev_fixtures.py  run_gap_analysis.py  run_provider.py
tests/: conftest.py
tests/analysis/: test_analysis.py  test_provider_audit.py
tests/api/: test_api.py
tests/fixtures/: circlek_station_search.json  circlek_station_search_page.html  espresso_house_fetch.json  ids_stations.json  preem_station_detail.json  preem_station_list.json  rasta_contact.html  rasta_detail.html  rasta_listing.html  trafikverket_parking.json  trb_locations.json
tests/normalization/: test_geo.py  test_merge.py  test_taxonomy.py
tests/providers/: test_circlek.py  test_espresso_house.py  test_ids.py  test_preem.py  test_rasta.py  test_trafikverket.py  test_trb.py
tests/services/: test_baserow.py  test_curation.py
(+7 files in other folders)
